feat: study watermarks